fix: responsive application on mobile devices

--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@ body {
     padding: 0;
     background-color: #fff0f5;
     color: #333;
-    height: 100dvh;
 }
 
 .wrapper {
-    min-height: 100%;
+    min-height: 100vh;
+    max-height: 100dvh;
     display: flex;
     flex-direction: column;
 }
@@ -77,7 +77,7 @@ footer {
     padding: 1em;
     font-size: 0.9em;
     position: relative;
-    min-height: 250px; /* Ajuste conforme necessário */
+    min-height: 230px; /* Ajuste conforme necessário */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -87,4 +87,35 @@ footer {
 footer p {
     margin: 0.3em 0;
     position: relative; /* Isso garante que o texto fique acima da imagem de fundo */
+}
+
+.contact {
+    font-size: 20px;
+    margin-top: 1.5rem;
+}
+
+@media (min-width: 768px) {
+    footer {
+        min-height: min(200px, 25dvh);
+        padding: 0.5em;
+        min-height: 430px;
+    }
+    
+    .contact {
+        font-size: clamp(14px, 4vw, 18px);
+        margin-top: 1rem;
+    }
+}
+
+@media (min-width: 800px) {
+    footer {
+        min-height: min(200px, 25dvh);
+        padding: 0.5em;
+        min-height: 435px;
+    }
+    
+    .contact {
+        font-size: clamp(14px, 4vw, 18px);
+        margin-top: 1rem;
+    }
 }
